--- a/index.html
+++ b/index.html
@@ -1,300 +1,301 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ABBY.WORLD Cannes 2025</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background: black;
-      color: white;
-      font-family: Arial, sans-serif;
-    }
-
-    canvas {
-      display: block;
-    }
-
-    .label-left, .label-right {
-      position: absolute;
-      font-size: 10px;
-      z-index: 10;
-      white-space: nowrap;
-    }
-
-    .label-left {
-      left: 5vw;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    .label-right {
-      right: 5vw;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    .label-mobile {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 10px;
-      z-index: 10;
-    }
-
-    .label-mobile.top {
-      top: 10%;
-    }
-
-    .label-mobile.bottom {
-      bottom: 10%;
-    }
-
-    .form-wrapper {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-    }
-
-    .form-wrapper input {
-      padding: 6px 10px;
-      border: none;
-      border-bottom: 1px solid white;
-      background: black;
-      color: white;
-      font-size: 10px;
-      outline: none;
-    }
-
-    .volume-icon {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      width: 14px;
-      height: 14px;
-      cursor: pointer;
-      z-index: 20;
-      fill: white;
-      opacity: 0.7;
-    }
-
-    @media (max-width: 768px) {
-      .label-left, .label-right {
-        display: none;
-      }
-
-      .label-mobile {
-        display: block;
-      }
-
-      .form-wrapper input {
-        font-size: 12px;
-      }
-    }
-
-    @media (min-width: 769px) {
-      .label-mobile {
-        display: none;
-      }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>ABBY.WORLD Cannes 2025</title>
+<link rel="icon" href="favicon.png" type="image/png">
+<style>
+body {
+margin: 0;
+overflow: hidden;
+background-color: black;
+font-family: Arial, sans-serif;
+}
+canvas {
+display: block;
+}
+#header {
+position: fixed;
+top: 50%;
+left: 5vw;
+transform: translateY(-50%);
+color: white;
+font-size: 10px;
+font-family: Arial, sans-serif;
+z-index: 999;
+}
+#signup-form-container {
+position: fixed;
+top: 50%;
+right: 5vw;
+transform: translateY(-50%);
+z-index: 999;
+}
+#signup-form {
+background: black;
+padding: 5px;
+border-radius: 8px;
+border: 1px solid black;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+#signup-form input[type="email"] {
+padding: 6px 10px;
+border: none;
+border-bottom: 1px solid transparent;
+background: black;
+color: white;
+border-radius: 0;
+outline: none;
+font-size: 10px;
+transition: border-color 0.2s ease;
+text-align: center;
+}
+#signup-form input[type="email"]:focus {
+border-bottom: 1px solid white;
+}
+#response-message {
+color: white;
+font-size: 10px;
+margin-top: 6px;
+opacity: 0;
+transition: opacity 0.5s ease;
+}
+input::placeholder {
+color: white;
+opacity: 1;
+font-size: 10px;
+}
+#audio-icon {
+position: fixed;
+top: 10px;
+right: 10px;
+width: 16px;
+height: 16px;
+z-index: 1000;
+cursor: pointer;
+fill: white;
+}
+@media (max-width: 768px) {
+#header {
+top: 10vh;
+left: 50%;
+transform: translateX(-50%);
+text-align: center;
+}
+#signup-form-container {
+top: auto;
+bottom: 10vh;
+left: 50%;
+right: auto;
+transform: translateX(-50%);
+text-align: center;
+}
+canvas {
+transform: scale(0.85);
+image-rendering: auto;
+}
+}
+</style>
 </head>
 <body>
-
-<!-- Volymikon -->
-<svg id="volumeToggle" class="volume-icon" viewBox="0 0 24 24">
-  <path id="audioPath" d="M3 10v4h4l5 5V5L7 10H3z" />
+<svg id="audio-icon" viewBox="0 0 24 24">
+<path id="audio-icon-path" d="M3 10v4h4l5 5V5l-5 5H3z" fill="white"/>
 </svg>
 
-<!-- Text på desktop -->
-<div class="label-left">CANNES 2025</div>
-<div class="label-right">
-  <form action="https://formspree.io/f/xldjayre" method="POST" class="form-wrapper">
-    <input type="email" name="email" placeholder="SIGN UP" required />
-  </form>
+<div id="header">CANNES 2025</div>
+<div id="signup-form-container">
+<form action="https://formspree.io/f/xldjayre" method="POST" id="signup-form">
+<input type="email" name="email" placeholder="SIGN UP" required>
+</form>
+<p id="response-message"></p>
 </div>
 
-<!-- Text på mobil -->
-<div class="label-mobile top">CANNES 2025</div>
-<div class="label-mobile bottom">
-  <form action="https://formspree.io/f/xldjayre" method="POST" class="form-wrapper">
-    <input type="email" name="email" placeholder="SIGN UP" required />
-  </form>
-</div>
-
-<!-- Musik -->
-<audio id="bgMusic" loop>
-  <source src="https://raw.githubusercontent.com/ABBY-WORLD/FIATLUX/main/fiatlux.mp3" type="audio/mpeg" />
+<audio id="bgMusic" loop autoplay>
+<source src="https://raw.githubusercontent.com/ABBY-WORLD/FIATLUX/main/fiatlux.mp3" type="audio/mpeg">
 </audio>
 
-<!-- Canvas -->
 <canvas id="canvas"></canvas>
 
 <script>
-  const canvas = document.getElementById("canvas");
-  const ctx = canvas.getContext("2d");
-  const bgMusic = document.getElementById("bgMusic");
-  const audioPath = document.getElementById("audioPath");
-  let musicMuted = true;
-  let musicStarted = false;
+const canvas = document.getElementById("canvas");
+const ctx = canvas.getContext("2d");
+const bgMusic = document.getElementById("bgMusic");
+const audioIcon = document.getElementById("audio-icon");
+const audioPath = document.getElementById("audio-icon-path");
+let musicMuted = false;
 
-  const isMobile = window.innerWidth <= 768;
+audioIcon.addEventListener("click", () => {
+if (musicMuted) {
+bgMusic.play();
+audioPath.setAttribute("d", "M3 10v4h4l5 5V5l-5 5H3z");
+musicMuted = false;
+} else {
+bgMusic.pause();
+audioPath.setAttribute("d", "M16.5 12c0-1.77-1.02-3.29-2.5-4.03v8.06c1.48-.74 2.5-2.26 2.5-4.03z M19 12c0 2.21-1.2 4.15-3 5.19v-2.17c.61-.55 1-1.35 1-2.22s-.39-1.67-1-2.22V6.81c1.8 1.04 3 2.98 3 5.19z M3 10v4h4l5 5V5l-5 5H3z");
+musicMuted = true;
+}
+});
 
-  // Start musik vid första klick var som helst
-  document.body.addEventListener("click", () => {
-    if (!musicStarted) {
-      bgMusic.play();
-      musicStarted = true;
-      musicMuted = false;
-      updateVolumeIcon();
-    }
-  });
+let rotationSpeedX = 0.005;
+let rotationSpeedY = 0.005;
+    let focalLength = 300;
+    let targetFocalLength = 3000;
+    let focalLength = 3000;
+    let targetFocalLength = 300;
+let numPoints = 261;
+let targetPoints = 261;
+let sphereRadius = Math.min(window.innerWidth, window.innerHeight) * 0.4;
+let points = [];
 
-  // Volymknapp
-  document.getElementById("volumeToggle").addEventListener("click", (e) => {
-    e.stopPropagation();
-    musicMuted = !musicMuted;
-    if (musicMuted) {
-      bgMusic.pause();
-    } else {
-      bgMusic.play();
-    }
-    updateVolumeIcon();
-  });
+const isMobile = window.innerWidth <= 768;
 
-  function updateVolumeIcon() {
-    audioPath.setAttribute(
-      "d",
-      musicMuted
-        ? "M16.5 12c0-1.77-1.02-3.29-2.5-4.03v8.06c1.48-.74 2.5-2.26 2.5-4.03z M19 12c0 2.21-1.2 4.15-3 5.19v-2.17c.61-1 1.35-2.22.39-3.67-1-2.22-1.67-1-2.22z"
-        : "M3 10v4h4l5 5V5L7 10H3z"
-    );
-  }
+function generateFibonacciSphere(n) {
+let pts = [];
+const phi = Math.PI * (3 - Math.sqrt(5));
+const words = ["ABBY", "WORLD"];
+for (let i = 0; i < n; i++) {
+let y = 1 - (i / (n - 1)) * 2;
+let radius = Math.sqrt(1 - y * y);
+let theta = phi * i;
+let x = Math.cos(theta) * radius;
+let z = Math.sin(theta) * radius;
+let word = words[Math.floor(Math.random() * words.length)];
+pts.push({ x: x * sphereRadius, y: y * sphereRadius, z: z * sphereRadius, word });
+}
+return pts;
+}
 
-  let rotationSpeedX = 0.005;
-  let rotationSpeedY = 0.005;
-  let focalLength = 3000;
-  let targetFocalLength = 300;
-  let focalDirection = 1;
+function resizeCanvas() {
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+sphereRadius = Math.min(canvas.width, canvas.height) * 0.4;
+points = generateFibonacciSphere(numPoints);
+}
 
-  let numPoints = 261;
-  let targetPoints = 400;
-  let points = [];
-  let sphereRadius = Math.min(window.innerWidth, window.innerHeight) * 0.4;
+window.addEventListener("resize", resizeCanvas);
+resizeCanvas();
 
-  function resizeCanvas() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-    sphereRadius = Math.min(canvas.width, canvas.height) * 0.4;
-    points = generateFibonacciSphere(numPoints);
-  }
+function rotateY(point, angle) {
+const cosA = Math.cos(angle), sinA = Math.sin(angle);
+return {
+x: cosA * point.x + sinA * point.z,
+y: point.y,
+z: -sinA * point.x + cosA * point.z,
+word: point.word
+};
+}
 
-  window.addEventListener("resize", resizeCanvas);
-  resizeCanvas();
+function rotateX(point, angle) {
+const cosA = Math.cos(angle), sinA = Math.sin(angle);
+return {
+x: point.x,
+y: cosA * point.y - sinA * point.z,
+z: sinA * point.y + cosA * point.z,
+word: point.word
+};
+}
 
-  function generateFibonacciSphere(n) {
-    const pts = [];
-    const phi = Math.PI * (3 - Math.sqrt(5));
-    const words = ["ABBY", "WORLD"];
+let angleX = 0, angleY = 0;
+let mouseX = 0, mouseY = 0;
 
-    for (let i = 0; i < n; i++) {
-      let y = 1 - (i / (n - 1)) * 2;
-      let radius = Math.sqrt(1 - y * y);
-      let theta = phi * i;
-      let x = Math.cos(theta) * radius;
-      let z = Math.sin(theta) * radius;
-      let word = words[Math.floor(Math.random() * words.length)];
-      pts.push({
-        x: x * sphereRadius,
-        y: y * sphereRadius,
-        z: z * sphereRadius,
-        word,
-      });
-    }
-    return pts;
-  }
+document.addEventListener("mousemove", e => {
+mouseX = e.clientX / window.innerWidth;
+mouseY = e.clientY / window.innerHeight;
+});
 
-  function rotateY(point, angle) {
-    const cosA = Math.cos(angle),
-      sinA = Math.sin(angle);
-    return {
-      x: cosA * point.x + sinA * point.z,
-      y: point.y,
-      z: -sinA * point.x + cosA * point.z,
-      word: point.word,
-    };
-  }
+setInterval(() => {
+targetFocalLength = targetFocalLength === 3000 ? 1200 : 3000;
+targetPoints = targetPoints === 400 ? 100 : 400;
+}, 6000);
 
-  function rotateX(point, angle) {
-    const cosA = Math.cos(angle),
-      sinA = Math.sin(angle);
-    return {
-      x: point.x,
-      y: cosA * point.y - sinA * point.z,
-      z: sinA * point.y + cosA * point.z,
-      word: point.word,
-    };
-  }
+function animateValues() {
+focalLength += (targetFocalLength - focalLength) * 0.02;
+if (Math.abs(targetPoints - numPoints) > 1) {
+numPoints += (targetPoints - numPoints) * 0.05;
+points = generateFibonacciSphere(Math.round(numPoints));
+}
+}
 
-  let angleX = 0,
-    angleY = 0;
+function draw() {
+ctx.clearRect(0, 0, canvas.width, canvas.height);
+animateValues();
 
-  function animateFOVAndPoints() {
-    focalLength += 10 * focalDirection;
-    if (focalLength >= 3000 || focalLength <= 300) {
-      focalDirection *= -1;
-    }
+rotationSpeedX = 0.001 + (mouseY - 0.5) * 0.02;
+rotationSpeedY = 0.001 + (mouseX - 0.5) * 0.02;
 
-    // Mjuk animering av antal punkter
-    if (numPoints < targetPoints) numPoints += 1;
-    else if (numPoints > targetPoints) numPoints -= 1;
-    else targetPoints = targetPoints === 400 ? 100 : 400;
+let transformedPoints = points.map(p => rotateX(rotateY(p, angleY), angleX));
+transformedPoints.sort((a, b) => b.z - a.z);
 
-    points = generateFibonacciSphere(numPoints);
-  }
+transformedPoints.forEach(p => {
+let scale = focalLength / (focalLength + Math.abs(p.z));
+let x2D = canvas.width / 2 + p.x * scale;
+let y2D = canvas.height / 2 + p.y * scale;
 
-  function draw() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    animateFOVAndPoints();
+let depthFactor = (p.z + sphereRadius) / (2 * sphereRadius);
+let brightness = depthFactor * 255;
 
-    let transformed = points.map((p) =>
-      rotateX(rotateY(p, angleY), angleX)
-    );
-    transformed.sort((a, b) => b.z - a.z);
+ctx.globalAlpha = p.z < 0 ? 0.5 : 1.0;
+let fontScale = isMobile ? 0.8 : 1.0;
+let fontSize = p.z > 0 ? ((8 + 6 * scale) * fontScale) : ((6 + 4 * scale) * fontScale);
+ctx.fillStyle = `rgb(${brightness},${brightness},${brightness})`;
+ctx.font = `${fontSize}px Arial`;
+ctx.textAlign = "center";
+ctx.textBaseline = "middle";
+ctx.fillText(p.word, x2D, y2D);
+});
 
-    transformed.forEach((p) => {
-      const scale = focalLength / (focalLength + Math.abs(p.z));
-      const x2D = canvas.width / 2 + p.x * scale;
-      const y2D = canvas.height / 2 + p.y * scale;
+ctx.globalAlpha = 1.0;
+angleX += rotationSpeedX;
+angleY += rotationSpeedY;
+requestAnimationFrame(draw);
+}
 
-      const depthFactor = (p.z + sphereRadius) / (2 * sphereRadius);
-      const brightness = depthFactor * 255;
-      const alpha = p.z < 0 ? 0.4 : 1.0;
-      ctx.globalAlpha = alpha;
+draw();
 
-      const fontSize = isMobile
-        ? 8 * scale
-        : p.z > 0
-        ? 10 + 6 * scale
-        : 8 + 4 * scale;
+const form = document.getElementById('signup-form');
+const responseMsg = document.getElementById('response-message');
 
-      ctx.fillStyle = `rgb(${brightness}, ${brightness}, ${brightness})`;
-      ctx.font = `${fontSize}px Arial`;
-      ctx.textAlign = "center";
-      ctx.textBaseline = "middle";
-      ctx.fillText(p.word, x2D, y2D);
-    });
+form.addEventListener('submit', function (e) {
+e.preventDefault();
+const data = new FormData(form);
 
-    ctx.globalAlpha = 1.0;
-    angleX += rotationSpeedX;
-    angleY += rotationSpeedY;
-    requestAnimationFrame(draw);
-  }
+fetch(form.action, {
+method: 'POST',
+body: data,
+headers: {
+'Accept': 'application/json'
+}
+})
+.then(response => {
+if (response.ok) {
+showMessage("THANK YOU");
+form.reset();
+} else {
+response.json().then(data => {
+if (data.errors) {
+showMessage(data.errors.map(error => error.message).join(", "));
+} else {
+showMessage("ERROR");
+}
+});
+}
+})
+.catch(error => {
+showMessage("ERROR");
+console.error("Error:", error);
+});
+});
 
-  draw();
+function showMessage(message) {
+responseMsg.textContent = message;
+responseMsg.style.opacity = 1;
+setTimeout(() => {
+responseMsg.style.opacity = 0;
+}, 3000);
+}
 </script>
 </body>
 </html>
