--- a/index.html
+++ b/index.html
@@ -1,189 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ABBY.WORLD Cannes 2025</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background: black;
-      color: white;
-      font-family: Arial, sans-serif;
-    }
-
-    canvas {
-      display: block;
-    }
-
-    .label-left, .label-right {
-      position: absolute;
-      font-size: 10px;
-      z-index: 10;
-      white-space: nowrap;
-    }
-
-    .label-left {
-      left: 5vw;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    .label-right {
-      right: 5vw;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    .label-mobile {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 10px;
-      z-index: 10;
-    }
-
-    .label-mobile.top {
-      top: 10%;
-    }
-
-    .label-mobile.bottom {
-      bottom: 10%;
-    }
-
-    .form-wrapper {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-    }
-
-    .form-wrapper input {
-      padding: 6px 10px;
-      border: none;
-      border-bottom: 1px solid white;
-      background: black;
-      color: white;
-      font-size: 10px;
-      outline: none;
-    }
-
-    .volume-icon {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      width: 14px;
-      height: 14px;
-      cursor: pointer;
-      z-index: 20;
-      fill: white;
-      opacity: 0.7;
-    }
-
-    @media (max-width: 768px) {
-      .label-left, .label-right {
-        display: none;
-      }
-
-      .label-mobile {
-        display: block;
-      }
-
-      .form-wrapper input {
-        font-size: 12px;
-      }
-    }
-
-    @media (min-width: 769px) {
-      .label-mobile {
-        display: none;
-      }
-    }
-  </style>
-</head>
-<body>
-
-<!-- Volymikon -->
-<svg id="volumeToggle" class="volume-icon" viewBox="0 0 24 24">
-  <path id="audioPath" d="M3 10v4h4l5 5V5L7 10H3z" />
-</svg>
-
-<!-- Text på desktop -->
-<div class="label-left">CANNES 2025</div>
-<div class="label-right">
-  <form action="https://formspree.io/f/xldjayre" method="POST" class="form-wrapper">
-    <input type="email" name="email" placeholder="SIGN UP" required />
-  </form>
-</div>
-
-<!-- Text på mobil -->
-<div class="label-mobile top">CANNES 2025</div>
-<div class="label-mobile bottom">
-  <form action="https://formspree.io/f/xldjayre" method="POST" class="form-wrapper">
-    <input type="email" name="email" placeholder="SIGN UP" required />
-  </form>
-</div>
-
-<!-- Musik -->
-<audio id="bgMusic" loop>
-  <source src="https://raw.githubusercontent.com/ABBY-WORLD/FIATLUX/main/fiatlux.mp3" type="audio/mpeg" />
-</audio>
-
-<!-- Canvas -->
-<canvas id="canvas"></canvas>
-
 <script>
   const canvas = document.getElementById("canvas");
   const ctx = canvas.getContext("2d");
   const bgMusic = document.getElementById("bgMusic");
-  const audioPath = document.getElementById("audioPath");
+  const audioIcon = document.getElementById("audio-icon");
+  const audioPath = document.getElementById("audio-icon-path");
   let musicMuted = true;
-  let musicStarted = false;
 
-  const isMobile = window.innerWidth <= 768;
-
-  // Start musik vid första klick var som helst
   document.body.addEventListener("click", () => {
-    if (!musicStarted) {
+    if (bgMusic.muted) {
+      bgMusic.muted = false;
       bgMusic.play();
-      musicStarted = true;
       musicMuted = false;
-      updateVolumeIcon();
     }
-  });
+  }, { once: true });
 
-  // Volymknapp
-  document.getElementById("volumeToggle").addEventListener("click", (e) => {
-    e.stopPropagation();
-    musicMuted = !musicMuted;
+  audioIcon.addEventListener("click", (event) => {
+    event.stopPropagation();
     if (musicMuted) {
-      bgMusic.pause();
-    } else {
       bgMusic.play();
+      audioPath.setAttribute("d", "M3 10v4h4l5 5V5l-5 5H3z");
+      musicMuted = false;
+    } else {
+      bgMusic.pause();
+      audioPath.setAttribute("d", "M16.5 12c0-1.77-1.02-3.29-2.5-4.03v8.06c1.48-.74 2.5-2.26 2.5-4.03z M19 12c0 2.21-1.2 4.15-3 5.19v-2.17c.61-.55 1-1.35 1-2.22s-.39-1.67-1-2.22V6.81c1.8 1.04 3 2.98 3 5.19z M3 10v4h4l5 5V5l-5 5H3z");
+      musicMuted = true;
     }
-    updateVolumeIcon();
   });
-
-  function updateVolumeIcon() {
-    audioPath.setAttribute(
-      "d",
-      musicMuted
-        ? "M16.5 12c0-1.77-1.02-3.29-2.5-4.03v8.06c1.48-.74 2.5-2.26 2.5-4.03z M19 12c0 2.21-1.2 4.15-3 5.19v-2.17c.61-1 1.35-2.22.39-3.67-1-2.22-1.67-1-2.22z"
-        : "M3 10v4h4l5 5V5L7 10H3z"
-    );
-  }
 
   let rotationSpeedX = 0.005;
   let rotationSpeedY = 0.005;
-  let focalLength = 1200;
+  let focalLength = 300;
   let targetFocalLength = 3000;
-  let focalDirection = 1;
-
   let numPoints = 261;
-  let targetPoints = 400;
-  let points = [];
+  let targetPoints = 261;
   let sphereRadius = Math.min(window.innerWidth, window.innerHeight) * 0.4;
+  let points = [];
+
+  const isMobile = window.innerWidth <= 768;
+
+  function generateFibonacciSphere(n) {
+    let pts = [];
+    const phi = Math.PI * (3 - Math.sqrt(5));
+    const words = ["ABBY", "WORLD"];
+    for (let i = 0; i < n; i++) {
+      let y = 1 - (i / (n - 1)) * 2;
+      let radius = Math.sqrt(1 - y * y);
+      let theta = phi * i;
+      let x = Math.cos(theta) * radius;
+      let z = Math.sin(theta) * radius;
+      let word = words[Math.floor(Math.random() * words.length)];
+      pts.push({ x: x * sphereRadius, y: y * sphereRadius, z: z * sphereRadius, word });
+    }
+    return pts;
+  }
 
   function resizeCanvas() {
     canvas.width = window.innerWidth;
@@ -195,93 +64,76 @@
   window.addEventListener("resize", resizeCanvas);
   resizeCanvas();
 
-  function generateFibonacciSphere(n) {
-    const pts = [];
-    const phi = Math.PI * (3 - Math.sqrt(5));
-    const words = ["ABBY", "WORLD"];
-
-    for (let i = 0; i < n; i++) {
-      let y = 1 - (i / (n - 1)) * 2;
-      let radius = Math.sqrt(1 - y * y);
-      let theta = phi * i;
-      let x = Math.cos(theta) * radius;
-      let z = Math.sin(theta) * radius;
-      let word = words[Math.floor(Math.random() * words.length)];
-      pts.push({
-        x: x * sphereRadius,
-        y: y * sphereRadius,
-        z: z * sphereRadius,
-        word,
-      });
-    }
-    return pts;
-  }
-
   function rotateY(point, angle) {
-    const cosA = Math.cos(angle),
-      sinA = Math.sin(angle);
+    const cosA = Math.cos(angle), sinA = Math.sin(angle);
     return {
       x: cosA * point.x + sinA * point.z,
       y: point.y,
       z: -sinA * point.x + cosA * point.z,
-      word: point.word,
+      word: point.word
     };
   }
 
   function rotateX(point, angle) {
-    const cosA = Math.cos(angle),
-      sinA = Math.sin(angle);
+    const cosA = Math.cos(angle), sinA = Math.sin(angle);
     return {
       x: point.x,
       y: cosA * point.y - sinA * point.z,
       z: sinA * point.y + cosA * point.z,
-      word: point.word,
+      word: point.word
     };
   }
 
-  let angleX = 0,
-    angleY = 0;
+  let angleX = 0, angleY = 0;
+  let mouseX = 0, mouseY = 0;
 
-  function animateFOVAndPoints() {
-    focalLength += 10 * focalDirection;
-    if (focalLength >= 3000 || focalLength <= 1200) {
-      focalDirection *= -1;
+  document.addEventListener("mousemove", e => {
+    mouseX = e.clientX / window.innerWidth;
+    mouseY = e.clientY / window.innerHeight;
+  });
+
+  let toggleDirection = true;
+  setInterval(() => {
+    if (toggleDirection) {
+      targetFocalLength = 3000;
+      targetPoints = 400;
+    } else {
+      targetFocalLength = 1200;
+      targetPoints = 100;
     }
+    toggleDirection = !toggleDirection;
+  }, 6000);
 
-    // Mjuk animering av antal punkter
-    if (numPoints < targetPoints) numPoints += 1;
-    else if (numPoints > targetPoints) numPoints -= 1;
-    else targetPoints = targetPoints === 400 ? 100 : 400;
-
-    points = generateFibonacciSphere(numPoints);
+  function animateValues() {
+    focalLength += (targetFocalLength - focalLength) * 0.02;
+    if (Math.abs(targetPoints - numPoints) > 1) {
+      numPoints += (targetPoints - numPoints) * 0.05;
+      points = generateFibonacciSphere(Math.round(numPoints));
+    }
   }
 
   function draw() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    animateFOVAndPoints();
+    animateValues();
 
-    let transformed = points.map((p) =>
-      rotateX(rotateY(p, angleY), angleX)
-    );
-    transformed.sort((a, b) => b.z - a.z);
+    rotationSpeedX = 0.001 + (mouseY - 0.5) * 0.02;
+    rotationSpeedY = 0.001 + (mouseX - 0.5) * 0.02;
 
-    transformed.forEach((p) => {
-      const scale = focalLength / (focalLength + Math.abs(p.z));
-      const x2D = canvas.width / 2 + p.x * scale;
-      const y2D = canvas.height / 2 + p.y * scale;
+    let transformedPoints = points.map(p => rotateX(rotateY(p, angleY), angleX));
+    transformedPoints.sort((a, b) => b.z - a.z);
 
-      const depthFactor = (p.z + sphereRadius) / (2 * sphereRadius);
-      const brightness = depthFactor * 255;
-      const alpha = p.z < 0 ? 0.4 : 1.0;
-      ctx.globalAlpha = alpha;
+    transformedPoints.forEach(p => {
+      let scale = focalLength / (focalLength + Math.abs(p.z));
+      let x2D = canvas.width / 2 + p.x * scale;
+      let y2D = canvas.height / 2 + p.y * scale;
 
-      const fontSize = isMobile
-        ? 8 * scale
-        : p.z > 0
-        ? 10 + 6 * scale
-        : 8 + 4 * scale;
+      let depthFactor = (p.z + sphereRadius) / (2 * sphereRadius);
+      let brightness = depthFactor * 255;
 
-      ctx.fillStyle = `rgb(${brightness}, ${brightness}, ${brightness})`;
+      ctx.globalAlpha = p.z < 0 ? 0.5 : 1.0;
+      let fontScale = isMobile ? 0.8 : 1.0;
+      let fontSize = p.z > 0 ? ((8 + 6 * scale) * fontScale) : ((6 + 4 * scale) * fontScale);
+      ctx.fillStyle = `rgb(${brightness},${brightness},${brightness})`;
       ctx.font = `${fontSize}px Arial`;
       ctx.textAlign = "center";
       ctx.textBaseline = "middle";
@@ -296,5 +148,3 @@
 
   draw();
 </script>
-</body>
-</html>
